--- a/teht/csstesti.html
+++ b/teht/csstesti.html
@@ -8,7 +8,7 @@
     <title>htt</title>
 </head>
 <body>
-    <h1 class="green">yes</h1>
+    <h1 class="green">yes!!!!!</h1>
     <div>
         my man
     </div>
